packeged the extension into .vsix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-form-ui-snippets",
+  "name": "react-snippets-by-uzisharma",
   "displayName": "React Form UI Snippets",
   "description": "Snippets for React form components and helpers: Button, Input, CheckBox, Form (2 variants), validateField, onChange, validateForm, and form handler.",
   "version": "0.0.1",
